Add Linux content

--- a/pages/linux/lecture-00.mdx
+++ b/pages/linux/lecture-00.mdx
@@ -1,8 +1,6 @@
-Введение
-========
+# Введение
 
-Зачем изучать Linux?
---------------------
+## Зачем изучать Linux?
 
 Рыночные доли десктопных ОС:
 
@@ -36,14 +34,13 @@
 - Системные администраторы и администраторы БД;
 - Разработчики.
 
-Благодаря совместимости с `POSIX <https://ru.wikipedia.org/wiki/POSIX>`_ принципы работы в Linux унифицированы с UNIX.
+Благодаря совместимости с [POSIX](https://ru.wikipedia.org/wiki/POSIX) принципы работы в Linux унифицированы с UNIX.
 
-Что такое дистрибутив?
-----------------------
+## Что такое дистрибутив?
 
-`Linux <https://www.youtube.com/watch?v=7XTHdcmjenI>`_ — операционная система с открытым исходным кодом.
+[Linux](https://www.youtube.com/watch?v=7XTHdcmjenI) — операционная система с открытым исходным кодом.
 
-`Ядро Linux <https://www.kernel.org/>`_ было создано `Линусом Торвальдсом <https://github.com/torvalds>`_. Ядро Linux продолжает развиваться с 1991 года по сегодняшний день под его руководством.
+[Ядро Linux](https://www.kernel.org/) было создано [Линусом Торвальдсом](https://github.com/torvalds). Ядро Linux продолжает развиваться с 1991 года по сегодняшний день под его руководством.
 
 Что делает ядро ОС?
 
@@ -59,7 +56,7 @@
 - командный интерпретатор (оболочка);
 - и т. д.
 
-`FSF — Free software Foundation <https://www.fsf.org/>`_ (Р. Столлман) — фонд свободного ПО, который в рамках проекта GNU, разрабатывает широкий спектр ПО под `лицензией GPL <https://www.gnu.org/licenses/licenses.html>`_.
+[FSF — Free software Foundation](https://www.fsf.org/) (Р. Столлман) — фонд свободного ПО, который в рамках проекта GNU, разрабатывает широкий спектр ПО под [лицензией GPL](https://www.gnu.org/licenses/licenses.html).
 
 В ОС Linux в качестве системного ПО используются:
 
@@ -70,64 +67,62 @@
 
 **Дистрибутив Linux = Ядро Linux + системное ПО + прикладное ПО**
 
-Обзор дистрибутивов Linux
--------------------------
+## Обзор дистрибутивов Linux
 
-`Дистрибутивы Linux <https://www.distrowatch.com>`_:
+[Дистрибутивы Linux](https://www.distrowatch.com):
 
-- `Debian <https://www.debian.org/>`_. Дистрибутив Debian создан в 1993 году супругами Деброй и Иеном Мердок и является одним из старейших дистрибутивов Linux, активно развивающихся на сегодняшний день. Имеет 3 варианта:
+- [Debian](https://www.debian.org/). Дистрибутив Debian создан в 1993 году супругами Деброй и Иеном Мердок и является одним из старейших дистрибутивов Linux, активно развивающихся на сегодняшний день. Имеет 3 варианта:
 
-  - `Debian Stable <https://www.debian.org/releases/stable/>`_ — вариант Debian в котором все пакеты максимально оттестированы;
-  - `Debian Unstable (Sid) <https://www.debian.org/releases/testing/>`_ — вариант Debian в котором самые новые, но не неоттестированные пакеты;
-  - `Debian Testing <https://www.debian.org/releases/unstable/>`_ — вариант Debian в котором пакеты проходят тестирование. В определенный момент он становится Stable-дистрибутивом;
+  - [Debian Stable](https://www.debian.org/releases/stable/) — вариант Debian в котором все пакеты максимально оттестированы;
+  - [Debian Unstable (Sid)](https://www.debian.org/releases/testing/) — вариант Debian в котором самые новые, но не неоттестированные пакеты;
+  - [Debian Testing](https://www.debian.org/releases/unstable/) — вариант Debian в котором пакеты проходят тестирование. В определенный момент он становится Stable-дистрибутивом;
 
-- Семейство `Ubuntu <https://www.ubuntu.com/>`_ создано на базе Debian Testing и поддерживается компанией Canonical во главе с `Марком Шаттлвортом <https://www.markshuttleworth.com/>`_.
+- [Семейство Ubuntu](https://www.ubuntu.com/) создано на базе Debian Testing и поддерживается компанией Canonical во главе с [Марком Шаттлвортом](https://www.markshuttleworth.com/).
 
-  - `Ubuntu Desktop <https://ubuntu.com/desktop>`_ — десктопный дистрибутив на базе Gnome 3;
-  - `Ubuntu Server <https://ubuntu.com/server>`_ — популярный серверный дистрибутив;
-  - `Edubuntu <https://edubuntu.org>`_ — десктопный дистрибутив на базе Gnome 3 для образования;
-  - `Ubuntu Studio <https://ubuntustudio.org>`_ — десктопный дистрибутив на базе Gnome 3 для редактирования мультимедиа-контета;
-  - `Ubuntu Kylin <https://ubuntukylin.com>`_ — десктопный дистрибутив на базе Gnome 3 для Китая;
-  - `Kubuntu <https://kubuntu.org>`_ — десктопный дистрибутив на базе KDE;
-  - `Lubuntu <https://lubuntu.net>`_ — десктопный дистрибутив на базе LXDE/LXQT;
-  - `Ubuntu Budgie <https://ubuntubudgie.org>`_ — десктопный дистрибутив на базе Budgie;
-  - `Ubuntu Mate <https://ubuntu-mate.org>`_ — десктопный дистрибутив на базе Mate;
-  - `Xubuntu <https://xubuntu.org>`_ — десктопный дистрибутив на базе Xfce.
+  - [Ubuntu Desktop](https://ubuntu.com/desktop/) — десктопный дистрибутив на базе Gnome 3;
+  - [Ubuntu Server](https://ubuntu.com/server/) — популярный серверный дистрибутив;
+  - [Edubuntu](https://edubuntu.org) — десктопный дистрибутив на базе Gnome 3 для образования;
+  - [Ubuntu Studio](https://ubuntustudio.org) — десктопный дистрибутив на базе Gnome 3 для редактирования мультимедиа-контета;
+  - [Ubuntu Kylin](https://ubuntukylin.com) — десктопный дистрибутив на базе Gnome 3 для Китая;
+  - [Kubuntu](https://kubuntu.org) — десктопный дистрибутив на базе KDE;
+  - [Lubuntu](https://lubuntu.net) — десктопный дистрибутив на базе LXDE/LXQT;
+  - [Ubuntu Budgie](https://ubuntubudgie.org) — десктопный дистрибутив на базе Budgie;
+  - [Ubuntu Mate](https://ubuntu-mate.org) — десктопный дистрибутив на базе Mate;
+  - [Xubuntu](https://xubuntu.org) — десктопный дистрибутив на базе Xfce.
 
 - Дистрибутивы основанные на базе Debian / Ubuntu:
 
-  - `Mint <https://www.linuxmint.com/>`_ — дистрибутив ориентированный на удобство и стабильность;
-  - `elementary <https://elementary.io/>`_ — дистрибутив с интерфейсом напоминающим Mac OS;
-  - `Zorin <https://zorinos.com/>`_ — дистрибутив с красивым графическим интерфейсом пользователя;
-  - `Kali Linux <https://www.kali.org/>`_ — дистрибутив для специалистов по информационной безопасности;
-  - `The Amnesic Incognito Live System (Tails) <https://tails.boum.org/>`_ — дистрибутив ориентированный на приватность и конфиденциальность;
-  - `Deepin <https://www.deepin.org/en/>`_ — дистрибутив на базе Debian Stable с графическим окружением Deepin;
-  - `MX Linux <https://mxlinux.org/>`_ — сбалансированный дистрибутив с графическим окружением Xfce на базе Debian Stable;
-  - `antiX <https://antixlinux.com>`_ — дистрибутив для устаревших компьютеров на базе Debian Stable;
-  - `SteamOS <https://store.steampowered.com/steamos/>`_ — игровой дистрибутив основанный на Debian.
+  - [Mint](https://www.linuxmint.com/) — дистрибутив ориентированный на удобство и стабильность;
+  - [elementary](https://elementary.io/) — дистрибутив с интерфейсом напоминающим Mac OS;
+  - [Zorin](https://zorinos.com/) — дистрибутив с красивым графическим интерфейсом пользователя;
+  - [Kali Linux](https://www.kali.org/) — дистрибутив для специалистов по информационной безопасности;
+  - [The Amnesic Incognito Live System (Tails)](https://tails.boum.org/) — дистрибутив ориентированный на приватность и конфиденциальность;
+  - [Deepin](https://www.deepin.org/en/) — дистрибутив на базе Debian Stable с графическим окружением Deepin;
+  - [MX Linux](https://mxlinux.org/) — сбалансированный дистрибутив с графическим окружением Xfce на базе Debian Stable;
+  - [antiX](https://antixlinux.com/) — дистрибутив для устаревших компьютеров на базе Debian Stable;
+  - [SteamOS](https://store.steampowered.com/steamos/) — игровой дистрибутив основанный на Debian.
 
-- `RedHat <https://www.redhat.com/en>`_ — американская корпорация, крупный разработчик свободного ПО и одноименное семейство дистрибутивов: 
+- [RedHat](https://www.redhat.com/en) — американская корпорация, крупный разработчик свободного ПО и одноименное семейство дистрибутивов: 
 
-  - `RedHat Enterprise Linux (RHEL) <https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux/>`_ — серверный дистрибутив с платной поддержкой;
-  - `Fedora <https://getfedora.org/>`_ — бесплатный дистрибутив, на котором RedHat обкатывает все новейшие изменения;
-  - `CentOS <https://www.centos.org/>`_ — свободный бесплатный клон RHEL;
-  - `Oracle Linux <https://www.oracle.com/linux/>`_ — вариант от Oracle;
+  - [RedHat Enterprise Linux (RHEL)](https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux/) — серверный дистрибутив с платной поддержкой;
+  - [Fedora](https://getfedora.org/) — бесплатный дистрибутив, на котором RedHat обкатывает все новейшие изменения;
+  - [CentOS](https://www.centos.org/) — свободный бесплатный клон RHEL;
+  - [Oracle Linux](https://www.oracle.com/linux/) — вариант от Oracle;
   - Amazon Linux — вариант дистрибутива от Amazon.
 
-- `ArchLinux <https://www.archlinux.org/>`_ — независимый дистрибутив, развиваемый сообществом и отличающийся максимально новым ПО, простотой и гибкостью кастомизации.
+- [ArchLinux](https://www.archlinux.org/) — независимый дистрибутив, развиваемый сообществом и отличающийся максимально новым ПО, простотой и гибкостью кастомизации.
 
-  - `Manjaro <https://manjaro.org/>`_ — вариант дистрибутив ArchLinux с графическим установщиком и рядом всмопогательных утилит.
+  - [Manjaro](https://manjaro.org/) — вариант дистрибутив ArchLinux с графическим установщиком и рядом всмопогательных утилит.
 
 - Другие известные дистрибутивы:
 
-  - `Slackware <https://www.slackware.com/>`_ — олдскульный и простой дистрибутив, поддерживаемый Патриком Фолькердингом
-    - `SUSE Linux Enterprise Server (SLES) <https://www.suse.com/products/server/>`_ — популярный серверный дистрибутив с платной поддержкой от компании SUSE
-    - `openSUSE <https://www.opensuse.org/>`_ — популярный бесплатный дистрибутив от компании SUSE
-    - `Gentoo <https://www.gentoo.org/>`_ — дистрибутив использующий установку ПО из исходных кодов.
-    - `Solus <https://getsol.us/home/>`_ — дистрибутив с графическим окружением Budgie.
+  - [Slackware](https://www.slackware.com/) — олдскульный и простой дистрибутив, поддерживаемый Патриком Фолькердингом
+    - [SUSE Linux Enterprise Server (SLES)](https://www.suse.com/products/server/) — популярный серверный дистрибутив с платной поддержкой от компании SUSE
+    - [openSUSE](https://www.opensuse.org/) — популярный бесплатный дистрибутив от компании SUSE
+    - [Gentoo](https://www.gentoo.org/) — дистрибутив использующий установку ПО из исходных кодов.
+    - [Solus](https://getsol.us/home/) — дистрибутив с графическим окружением Budgie.
 
-Стабильность или новизна?
--------------------------
+## Стабильность или новизна?
 
 По графику выхода релизов дистрибутивы можно разделить на две категории:
 
@@ -164,22 +159,20 @@
 
 - Семейство Linux (около трети рынка):
 
-  - `RedHat Enterprise Linux (RHEL) <https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux/>`_
-  - `Community Enterprise OS (CentOS) <https://www.centos.org/>`_
-  - `Oracle Linux <https://www.oracle.com/linux/>`_
+  - [RedHat Enterprise Linux (RHEL)](https://www.redhat.com/en/technologies/linux-platforms/enterprise-linux/)
+  - [Community Enterprise OS (CentOS)](https://www.centos.org/)
+  - [Oracle Linux](https://www.oracle.com/linux/)
   - Amazon Linux
-  - `SLES <https://www.suse.com/products/server/>`_
-  - `Ubuntu Server <https://ubuntu.com/server>`_
-  - `Debian Stable <https://www.debian.org/releases/stable/>`_
+  - [SLES](https://www.suse.com/products/server/)
+  - [Ubuntu Server](https://ubuntu.com/server)
+  - [Debian Stable](https://www.debian.org/releases/stable/)
 
-Интерфейс командной строки
---------------------------
+## Интерфейс командной строки
 
 Основным способом управления серверных систем является использование интерфейса командной строки. Этот способ требует минимальных системных ресурсов и достаточно легко реализуется программистами.
 При этом, настройки программы хранятся в конфигурационных файлах, а часто повторяющиеся действия автоматизируются с помощью скриптов.
 
-Графический интерфейс пользователя
-----------------------------------
+## Графический интерфейс пользователя
 
 Окружение рабочего стола (Desktop Environment) — это набор ПО, позволяющий создать полноценный графический интерфейс пользователя.
 
@@ -196,31 +189,25 @@
 
 * Стекируемый — окна могут изменять размеры и положение независимо от других окон, а также могут заслонять их собой (как в ОС Windows)
 
-.. image:: image2.png
-   :scale: 50 %
-   :alt: пример стекируемого оконного меннеджера
+![пример стекируемого оконного меннеджера](image2.png)
 
 * Тайловый — экран разделяется на смежные области занятые окнами приложений. Увеличение окна одного приложения приводит к уменьшению других окон.
 
-.. image:: image1.png
-   :scale: 175 %
-   :alt: пример тайлового оконного меннеджера
+![пример тайлового оконного меннеджера](image1.png)
 
-Идентификация дистрибутива
---------------------------
+## Идентификация дистрибутива
 
 Для идентификация дистрибутива можно использовать следующие команды:
 
-- ``uname -a`` ­— запрос версии ядра Linux
-- ``lsb_release -a`` — запрос описания дистрибутива
-- ``cat /etc/issue`` — текстовый файл с именем дистрибутива
-- ``cat /etc/*-release`` — текстовый файл с именем дистрибутива
-- ``cat /proc/version`` — текстовый файл с версией ядра Linux
-- ``screenfetch`` / ``neofetch`` — дополнительные утилиты
+- `uname -a` ­— запрос версии ядра Linux
+- `lsb_release -a` — запрос описания дистрибутива
+- `cat /etc/issue` — текстовый файл с именем дистрибутива
+- `cat /etc/*-release` — текстовый файл с именем дистрибутива
+- `cat /proc/version` — текстовый файл с версией ядра Linux
+- `screenfetch` / `neofetch` — дополнительные утилиты
 
-Литература
-----------
+## Литература
 
-- `Дмитрий Кетов. Внутреннее устройство Linux <https://drive.google.com/file/d/1EEAeifu3R92E5JA4aylDzufeKugmMYW5/view>`_
-- `Михаэль Кофлер. Linux. Установка, администрирование, настройка <https://drive.google.com/file/d/1hj0J7sKO3bUa06a8g74oEyO7DXRhyt8m/view>`_
-- `Уильям Шоттс. Командная строка Linux <https://drive.google.com/file/d/1VsfWKZtfu_--NmsFi7YgclpP0iVPdA9q/view>`_
+- [Дмитрий Кетов. Внутреннее устройство Linux](https://drive.google.com/file/d/1EEAeifu3R92E5JA4aylDzufeKugmMYW5/view)
+- [Михаэль Кофлер. Linux. Установка, администрирование, настройка](https://drive.google.com/file/d/1hj0J7sKO3bUa06a8g74oEyO7DXRhyt8m/view)
+- [Уильям Шоттс. Командная строка Linux](https://drive.google.com/file/d/1VsfWKZtfu_--NmsFi7YgclpP0iVPdA9q/view)
