--- a/pages/linux/users.mdx
+++ b/pages/linux/users.mdx
@@ -1,8 +1,6 @@
-Основные понятия
-================
+# Основные понятия
 
-Данные о пользователях
-----------------------
+## Данные о пользователях
 
 * ОС Linux идентифицирует пользователей с помощью UID (User ID).
 * Пользователь с UID 0 - это root, администратор (суперпользователь) системы.
@@ -10,7 +8,7 @@
 * Каждый пользователь может состоять в любом количестве дополнительных групп пользователей (secondary groups, supplementary groups).
 * ОС Linux идентифицируют группы пользователей с помощью GID (Group ID).
 
-Команда ``id`` показывает UID, GID, и дополнительные группы пользователя.
+Команда `id` показывает UID, GID, и дополнительные группы пользователя.
 
 Файлы, хранящие информацию о пользователях Linux:
 
@@ -40,22 +38,21 @@
 
 Команды для управления пользователями
 
-``useradd`` - добавление пользователя
-``userdel`` - удаление пользователя
-``usermod`` - модификация пользователя
-``adduser`` - интерактивное добавление пользователя
-``passwd`` - смена пароля пользователя
+`useradd` - добавление пользователя
+`userdel` - удаление пользователя
+`usermod` - модификация пользователя
+`adduser` - интерактивное добавление пользователя
+`passwd` - смена пароля пользователя
 
-``groupadd`` - добавление группы
-``groupmod`` - изменение группы
-``groupdel`` - удаление группы
-``addgroup`` - интерактивное добавление группы.
-``gpasswd`` - смена пароль группы
+`groupadd` - добавление группы
+`groupmod` - изменение группы
+`groupdel` - удаление группы
+`addgroup` - интерактивное добавление группы.
+`gpasswd` - смена пароль группы
 
-Стандартная система прав доступа к файлам
------------------------------------------
+## Стандартная система прав доступа к файлам
 
-Для назначения прав доступа к файлам служит программа ``chmod``
+Для назначения прав доступа к файлам служит программа `chmod`
 
 Права:
 
@@ -71,11 +68,11 @@
 
 Примеры:
 
-``chmod 777 test``
-``chmod 644 test`` — типичная маска для обычных файлов
-``chmod 664 test`` — типичная маска для обычных файлов
-``chmod 755 test`` — типичная маска для каталогов и исп.файлов
-``chmod 775 test`` — типичная маска для каталогов и исп.файлов
+`chmod 777 test`
+`chmod 644 test` — типичная маска для обычных файлов
+`chmod 664 test` — типичная маска для обычных файлов
+`chmod 755 test` — типичная маска для каталогов и исп.файлов
+`chmod 775 test` — типичная маска для каталогов и исп.файлов
 
 Модифицирующий синтаксис chmod:
 
@@ -94,8 +91,8 @@
 
 Примеры:
 
-``chmod +x test_file``
-``chmod o-x test_file``
+`chmod +x test_file`
+`chmod o-x test_file`
 
 umask - 644, 755 — показывает / изменяет маску прав доступа для вновь создаваемых файлов
 
