--- a/pages/linux/practice-01.mdx
+++ b/pages/linux/practice-01.mdx
@@ -1,13 +1,10 @@
-Установка и настройка веб-серверов
-----------------------------------
+# Установка и настройка веб-серверов
 
-Цель работы
-"""""""""""
+## Цель работы
 
 Научиться устанавливать и настраивать веб-серверы Apache HTTPd и Nginx.
 
-План работы
-"""""""""""
+## План работы
 
 - Установить веб-сервер Apache HTTPd
 - Сконфигурировать два разных виртуальных хоста
@@ -16,8 +13,7 @@
 - Сконфигурировать работу PHP через интерфейс FastCGI
 - Сконфигурировать проксирование веб-сайтов
 
-Теоретические основы
-""""""""""""""""""""
+## Теоретические основы
 
 Наиболее популярные веб-серверы:
 
@@ -40,58 +36,55 @@
 - выполнения дополнительных преобразований с возвращаемым клиенту контентом (например: сжатие, TLS-шифрование и т.п.);
 - защита от внешних атак;
 
-Подготовительный этап
-"""""""""""""""""""""
+## Подготовительный этап
 
 - Перед запуском виртуальной машины настройте её так, чтобы у нее было два сетевых адаптера:
 
     - Работающий в режиме «NAT»
     - Работающий в режиме «Виртуальный адаптер хоста» (Host-only adapter)
 
-- С помощью команды ``ip address`` убедитесь, что сетевые адаптеры получили IP-адреса:
+- С помощью команды `ip address` убедитесь, что сетевые адаптеры получили IP-адреса:
 
     - в сети 10.0.2.0/24 или 10.0.3.0/24
     - в сети 192.168.56.0/24
 
-- Отредактируйте на хост-компьютере файл ``C:\Windows\System32\Drivers\etc\hosts`` (для редактирования нужны права администратора, пароль администратора: «имикиц428»). В этот файл нужно поместить строки вида (IP-адрес нужно заменить на тот, который получен вашей виртуальной машиной в сети 192.168.56.0/24):
+- Отредактируйте на хост-компьютере файл `C:\Windows\System32\Drivers\etc\hosts` (для редактирования нужны права администратора, пароль администратора: «имикиц428»). В этот файл нужно поместить строки вида (IP-адрес нужно заменить на тот, который получен вашей виртуальной машиной в сети 192.168.56.0/24):
 
-.. code-block:: text
-
+```
   192.168.56.101 test1
   192.168.56.101 test2
+```
 
-- Добавьте аналогичные строки в файл ``/etc/hosts`` в виртуальной машине
+- Добавьте аналогичные строки в файл `/etc/hosts` в виртуальной машине
 
-Установка веб-сервера Apache HTTPd
-""""""""""""""""""""""""""""""""""
+## Установка веб-сервера Apache HTTPd
 
 - Установите пакет веб-сервера Apache HTTPd:
 
-.. code-block:: shell
-
+```bash
   sudo apt get install apache2
+```
 
 - Откройте в браузере хост-компьютера адрес http://test1 и убедитесь, что веб-сервер заработал.
 
 - Установите модуль для работы Apache HTTPd с PHP:
 
-.. code-block:: shell
-
+```bash
     sudo apt install libapache2-mod-php
+```
 
-- Создайте каталог www в домашней каталоге и поместите в него файл ``index.php`` следующего
+- Создайте каталог www в домашней каталоге и поместите в него файл `index.php` следующего
     вида:
 
-.. code-block:: html
-
+```
   <?php
       phpinfo();
   ?>
+```
 
-- Создайте файл ``/etc/apache2/sites-available/test2.conf`` (сделайте соответствующую замену):
+- Создайте файл `/etc/apache2/sites-available/test2.conf` (сделайте соответствующую замену):
 
-.. code-block:: apache
-
+```
   <VirtualHost *:80>
       ServerName test2
       DocumentRoot /home/user/www
@@ -99,54 +92,53 @@
           Require all granted
       </Directory>
   </VirtualHost>
+```
 
 - Включите новый виртуальный хост:
 
-.. code-block:: shell
-
+```bash
   sudo a2ensite test2
+```
 
 - Дайте команду Apache HTTPd перечитать конфигурацию:
 
-.. code-block:: shell
-
+```bash
   sudo systemctl reload apache2
+```
 
 - Откройте в браузере хост-компьютера адреса http://test1 и http://test1 и убедитесь, что веб-сервер по-разному обслуживает два виртуальных хоста.
 
-- Добавьте в файл ``/etc/apache2/sites-available/test2`` внутрь тега ``<Directory>`` строку:
+- Добавьте в файл `/etc/apache2/sites-available/test2` внутрь тега `<Directory>` строку:
 
-.. code-block:: apache
-
+```
   Options Indexes
+```
 
-- Переименуйте файл ``/home/user/www/index.php`` в ``index.php.bak``, перезагрузите конфигурацию Apache HTTPd и проверьте, что изменилось. Как измениться работа веб-сервера без опции ``Indexes``?
+- Переименуйте файл `/home/user/www/index.php` в `index.php.bak`, перезагрузите конфигурацию Apache HTTPd и проверьте, что изменилось. Как измениться работа веб-сервера без опции `Indexes`?
 
-- Переименуйте файл ``/home/user/www/index.php.bak`` обратно в ``index.php``.
+- Переименуйте файл `/home/user/www/index.php.bak` обратно в `index.php`.
 
-- Измените в файле ``/etc/apache/ports.conf`` номера основного портов с 80 на 8080. Внесите аналогичные изменения в файлах ``default`` и ``test2`` в каталоге ``/etc/apache2/sites-available``.
+- Измените в файле `/etc/apache/ports.conf` номера основного портов с 80 на 8080. Внесите аналогичные изменения в файлах `default` и `test2` в каталоге `/etc/apache2/sites-available`.
 
 - Дайте команду Apache HTTPd перечитать конфигурацию:
 
-.. code-block:: shell
-
+```bash
   sudo systemctl reload apache2
+```
 
-Установка веб-сервера Nginx
-"""""""""""""""""""""""""""
+## Установка веб-сервера Nginx
 
 1. Установите необходимые пакеты с помощью команды:
 
-.. code-block:: shell
-
+```bash
   sudo apt-get install nginx php-fpm
+```
 
 2. Откройте в браузере хост-компьютера адреса http://test1, http://test1:8080 и http://test2:8080, убедитесь, что веб-серверы Apache HTTPd и Nginx работают.
 
-3. Добавьте файл test2 в каталог ``/etc/nginx/sites-available/``:
+3. Добавьте файл test2 в каталог `/etc/nginx/sites-available/`:
 
-.. code-block:: nginx
-
+```
   server {
       listen 80;
       server_name test2;
@@ -165,13 +157,13 @@
           fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
       }
   }
+```
 
-1. Создайте символическую ссылку на файл ``/etc/nginx/sites-available/test2`` в каталоге ``/etc/nginx/sites-enabled`` и перезапустите Nginx.
+1. Создайте символическую ссылку на файл `/etc/nginx/sites-available/test2` в каталоге `/etc/nginx/sites-enabled` и перезапустите Nginx.
 
 2. Откройте в браузере хост-компьютера страницы по адресам http://test1, http://test2, http://test2/t1 и http://test2/t2, убедитесь, что веб-серверы Apache HTTPd и Nginx работают вместе.
 
-Литература
-""""""""""
+## Литература
 
 1. Кофлер М. Linux. Установка, настройка, администрирование
 2. https://httpd.apache.org/docs/2.4/
