--- a/pages/linux/lecture-00.mdx
+++ b/pages/linux/lecture-00.mdx
@@ -189,11 +189,11 @@
 
 * Стекируемый — окна могут изменять размеры и положение независимо от других окон, а также могут заслонять их собой (как в ОС Windows)
 
-![пример стекируемого оконного меннеджера](image2.png)
+![пример стекируемого оконного меннеджера](/linux/image2.png)
 
 * Тайловый — экран разделяется на смежные области занятые окнами приложений. Увеличение окна одного приложения приводит к уменьшению других окон.
 
-![пример тайлового оконного меннеджера](image1.png)
+![пример тайлового оконного меннеджера](/linux/image1.png)
 
 ## Идентификация дистрибутива
 
